--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -38,3 +38,27 @@
     border: none;
     cursor: pointer;
 }
+.adventages{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.adventages-wrapper{
+    display: flex;
+    gap: 100px;
+}
+.adventages-wrapper div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
+.adventages-wrapper div img{
+    width: 75px;
+    aspect-ratio: 1/1;
+    margin-bottom: 20px;
+}
+.adventages-wrapper div p{
+    color: #787777;
+    width: 200px;
+}
