--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -17,7 +17,7 @@
     width: 100%;
     height: 100%;
     background-color: #000;
-    opacity: 0.3;
+    opacity: 0.45;
 }
 .hero-information{
     display: flex;
@@ -29,36 +29,30 @@
     width: 800px;
     font-size: 28px;
     z-index: 2;
+    gap: 15px;
 }
 .hero-information button{
     padding: 10px 30px;
     font-size: 18px;
-    background-color: rgb(45, 106, 79);
-    color: #fff;
+    background-color: #fff;
+    color: #000;
     border: none;
     cursor: pointer;
 }
-.adventages{
+.about-us{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 50px 0;    
+}
+.about-us div{
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
 }
-.adventages-wrapper{
-    display: flex;
-    gap: 100px;
+.about-us div h3{
+    font-size: 30px;
 }
-.adventages-wrapper div{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    }
-.adventages-wrapper div img{
-    width: 75px;
-    aspect-ratio: 1/1;
-    margin-bottom: 20px;
-}
-.adventages-wrapper div p{
-    color: #787777;
-    width: 200px;
+.about-us div p{
+    font-size: 20px;
 }
