first step is completed

--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -16,6 +16,9 @@
     gap: 40px;
     color: #000;
 }
+.navbar__items a{
+    color: #000;
+}
 .lang-select{
     background-color: transparent;
     color: #000;
