--- a/src/App.scss
+++ b/src/App.scss
@@ -49,3 +49,9 @@ table {
  border-collapse: collapse;
  border-spacing: 0;
 }
+body{
+    scroll-behavior: smooth;
+}
+a{
+    text-decoration: none;
+}
