--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -31,7 +31,7 @@
     z-index: 2;
     gap: 15px;
 }
-.hero-information button{
+.hero-information a{
     padding: 10px 30px;
     font-size: 18px;
     background-color: #fff;
