--- a/src/components/products/Products.scss
+++ b/src/components/products/Products.scss
@@ -28,3 +28,10 @@
 .category__wrapper div{
     cursor: pointer;
 }
+.category-link{
+    color: #fff;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
