--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -22,3 +22,11 @@
     color: #fff;
     font-size: 30px;
 }
+
+@media only screen and (max-width: 790px) {
+    .footer-info__wrapper{
+        flex-direction: column;
+        gap: 25px;
+        align-items: center;
+    }
+}
