--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -30,6 +30,7 @@
     font-size: 28px;
     z-index: 2;
     gap: 15px;
+    padding: 0 10px;
 }
 .hero-information a{
     padding: 10px 30px;
@@ -43,7 +44,9 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    margin: 50px 0;    
+    margin: 50px 0;   
+    flex-wrap: wrap;
+    gap: 15px;
 }
 .about-us div{
     display: flex;
