--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -28,3 +28,15 @@
 .lang-option{
     color: #000;
 }
+
+@media only screen and (max-width:820px) {
+    .navbar{
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+    }
+    .navbar__menu{
+        flex-wrap: wrap;
+        gap: 10px 15px;
+    }
+}
