--- a/src/components/products/Products.scss
+++ b/src/components/products/Products.scss
@@ -1,40 +1,57 @@
-.products__wrapper{
+.products__wrapper {
     background-color: #000;
     width: 100%;
     padding: 20px 0;
 }
-.section-title{
+
+.section-title {
     color: #fff;
     font-size: 35px;
     text-align: center;
     letter-spacing: 2px;
 }
-.category-img{
-    width: 200px;
+
+.category-img {
+    width: 100%;
     aspect-ratio: 1/1;
 }
-.category-title{
-    color: #fff;
+
+.category-title {
+    color: #000;
     letter-spacing: 2px;
 }
-.category__wrapper{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px 20px;
-    align-items: center;
-    justify-content: center;
+
+.category__wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    grid-gap: 20px;
+    justify-items: center;
     margin-top: 20px;
 }
-.category__wrapper div{
-    cursor: pointer;
-}
-.category-link{
-    color: #fff;
+
+.category-link {
+    color: #000;
     font-size: 14px;
     display: flex;
     align-items: center;
     gap: 5px;
 }
-.category-item{
-    max-width: 200px;
+
+.category-item {
+    max-width: 400px;
+    background-color: #fff;
+    border-radius: 15px;
+    overflow: hidden;
+    padding: 10px;
+}
+@media only screen and (max-width: 720px){
+    .category__wrapper {
+        grid-template-columns: repeat(2, 1fr);         
+    }
+    .category-img{
+        width: 150px;
+    }
+    .category-title{
+        max-width: min-content;
+    }
 }
