--- a/src/pages/SingleCategory/SingleCategory.scss
+++ b/src/pages/SingleCategory/SingleCategory.scss
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #000;
-    color:#fff;
+    background-color: #fff;
+    color:#000;
     padding: 30px 0;
 }
 .single-category-title{
@@ -16,10 +16,18 @@
     justify-content: center;
     gap: 10px;
 }
+.product__wrapper{
+    width: 260px;
+    border: 1px solid #000;
+    padding: 10px
+}
 .product__wrapper img{
-    width: 250px;
-    height: 250px;
+    width: 230px;
+    aspect-ratio: 1/1;
 }
 .product__wrapper h4{
-    width: 200px;
+    width: 100%;
+    margin-top: 20px;
+    cursor: pointer;
+    word-break: break-all;
 }
