--- a/src/pages/SingleCategory/SingleCategory.scss
+++ b/src/pages/SingleCategory/SingleCategory.scss
@@ -8,7 +8,6 @@
 }
 .single-category-title{
     font-size: 40px;
-    margin-bottom: 20px;
 }
 .all__products__wrapper{
     display: flex;
@@ -30,4 +29,21 @@
     margin-top: 20px;
     cursor: pointer;
     word-break: break-all;
+}
+.single-cat-header__wrapper{
+    background-color: #000;
+    color: #fff;
+    padding: 10px 0;
+}
+.single-cat__header{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.single-cat-selection{
+    border: none;
+    padding: 10px 5px;
+    font-size: 16px;
+    outline: none;
 }
