--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,6 +1,6 @@
 .footer__wrapper{
     padding: 30px 0;
-    background-color: #000;
+    background-color: var(--mainBgColor);
 }
 .adress{
     width: 250px;
