--- a/src/components/products/Products.scss
+++ b/src/components/products/Products.scss
@@ -1,5 +1,5 @@
 .products__wrapper {
-    background-color: #000;
+    background-color: var(--mainBgColor);
     width: 100%;
     padding: 30px 0;
 }
@@ -19,6 +19,7 @@
 .category-title {
     color: #000;
     letter-spacing: 2px;
+    margin: 10px 0;
 }
 
 .category__wrapper {
@@ -30,11 +31,15 @@
 }
 
 .category-link {
-    color: #000;
+    color: #fff;
+    background-color: var(--mainBgColor);
+    padding: 10px;
+    border-radius: 25px;
     font-size: 14px;
     display: flex;
     align-items: center;
     gap: 5px;
+    
 }
 
 .category-item {
