--- a/src/components/brands/Brands.scss
+++ b/src/components/brands/Brands.scss
@@ -12,6 +12,9 @@
 .brands img{
     width: 200px;
 }
+.google-map__wrapper{
+    padding: 0px 0px 40px 0px;
+}
 @media only screen and (max-width: 690px) {
     .brands:nth-child(2){
         margin-top: -50px;
