--- a/src/components/brands/Brands.scss
+++ b/src/components/brands/Brands.scss
@@ -15,6 +15,12 @@
 .google-map__wrapper{
     padding: 0px 0px 40px 0px;
 }
+.map-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
 @media only screen and (max-width: 690px) {
     .brands:nth-child(2){
         margin-top: -50px;
